# toxic-comments

./: README.md  pyproject.toml
configs/: train.yaml
notebooks/: walkthrough.ipynb
scripts/: download_data.sh
src/: callbacks.py  dataset.py  metrics.py  model.py  train.py  utils.py
